# claude-code-usage-rs

./: .gitignore  COMMIT_STRATEGY.md  Cargo.toml  Cargo_test.toml  Makefile  README.md  TEST_COMPLETION_REPORT.md  acceptance-criteria.md  config.json  config.toml  implementation-plan.md  implementation_plan.md  pricing.json  priority_fixes.md  test_data.json  test_validation_plan.md  user-stories.md
benches/: README.md  performance_benchmarks.rs  quick_benchmarks.rs  simplified_benchmarks.rs
docs/: README.md  api-spec.md  architecture.md  architecture_adjustments.md  tech-stack.md
docs/development/: COMPILATION_FIX_SUMMARY.md  PUSH_CHECKLIST.md  compile_errors_analysis.md  fix_strategy.md
docs/planning/: requirements.md
docs/testing/: TESTING_ARCHITECTURE.md  TESTING_GUIDE.md
scripts/: check_coverage.py  check_performance_regression.py
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  minimal_app.rs  simple_app.rs  test_app.rs  utils.rs
src/analysis/: calculator.rs  insights.rs  mod.rs  statistics.rs  trends.rs
src/cli/: tests.rs
src/commands/: analyze.rs  budget.rs  config.rs  daily.rs  mod.rs  monthly.rs  session.rs  weekly.rs
src/data/: loader.rs  mod.rs  models.rs  parser.rs  simple_models.rs  storage.rs  tests.rs
src/error/: tests.rs
src/mcp/: mod.rs
src/output/: mod.rs
tests/: comprehensive_tests.rs  e2e_tests.rs  error_tests.rs  foundation_tests.rs  integration_tests.rs  performance_tests.rs  standalone_tests.rs  unit_tests.rs
tests/common/: assertions.rs  mock_services.rs  mod.rs  test_data.rs  test_utils.rs
